bge: Support 5717 C0, which is almost same as 5720 A0

PR:		209758
Obtained from:	DragonFlyBSD d79f5d8f5fe94cd6769207b2901422977d502bc0
MFC after:	1 week

Former-commit-id: a4a311560cb0e70e65f33e4fbb2a948360f71246